# pycounts_zz

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pycounts_zz/: __init__.py  plotting.py  pycounts_zz.py
tests/: test_pycounts_zz.py
