[tool.poetry]
name = "pycounts_zz"
version = "0.1.0"
description = "Calculate word counts in a text file!"
authors = ["zihan_zhou"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
